--- a/climweb/src/climweb/pages/satellite_imagery/static/satellite_imagery/css/satellite_imagery.css
+++ b/climweb/src/climweb/pages/satellite_imagery/static/satellite_imagery/css/satellite_imagery.css
@@ -438,3 +438,7 @@ a.leaflet-control-timecontrol { border-radius: 10px !important; }
 .ui-slider-tooltip { position: absolute; background-color: #d49500; height: 24px; max-width: 150px; min-width: 40px; top: -32px; left: -12px; padding: 4px 8px; display: flex; align-items: center; justify-content: center; border-radius: 6px; font-size: 13px; color: #fff; }
 .ui-slider-tooltip-val { width: max-content; }
 .ui-slider-tooltip::before { top: 100%; left: 20px; content: ''; height: 0; width: 0; position: absolute; border: 6px solid transparent; border-top-color: #d49500; margin-left: -0.5em; }
+
+.leaflet-top{
+  z-index:1
+}
